<resources>
    <string name="app_name">Grand Hotel</string>
    <string name="text_context">Grand caterings offers variety of standared menus to select at affordable price. See below to find a suitable standard menu for your event. We can also assist you with custom menus. Contact us for more details</string>
    <string name="btn1">See Menu</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Lunch</string>
    <string name="tab_text_2">Breakfast</string>
    <string name="tab_text_3">Dinner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lunch1"><![CDATA[Rice & Curry]]></string>
    <string name="lunch2">Fried Rice</string>
    <string name="Lunch3">Chicken Biriyani</string>
    <string name="lunch4">Nasi goreng</string>
    <string name="lunch_btn1">Order</string>
    <string name="bkfast_txt">Breakfast Menu</string>
    <string name="bkfast1"><![CDATA[Red Rice & Curry]]></string>
    <string name="bkfast2">Stringhoppers</string>
    <string name="dinner_txt">Dinner Menu</string>
    <string name="dinner1">Kotthu</string>
    <string name="dinner3">Noodles</string>
    <string name="lunch_txt">Lunch Menu</string>
    <string name="friedrice_topic">Fried Rice</string>
    <string name="friedrice_text">Chicken fried rice with two chicken drumlets</string>
    <string name="pricetex">Price Per One Plate</string>
    <string name="friedrice_price">Rs250</string>
    <string name="Noofplates">Enter the Number of Plates of Odering</string>
    <string name="back_btn">Back</string>
    <string name="Biriyani_topic">Biriyani with two chicken pieces with vegitable salad</string>
    <string name="Biriyan_topic">Chiken Biriyani</string>
    <string name="biriyani_price">Rs300</string>
    <string name="Nasigoran_topic">Nasi goreng</string>
    <string name="Nasigoran_text">Nasi goreng rice with bullsai egg with fress cucumber and tomato wedges</string>
    <string name="nasigoran_price">Rs350</string>
    <string name="redrice_topic"><![CDATA[Red Rice & Curry]]></string>
    <string name="redrice_text">Red Nadu Rice with Pol sambola ,dhal curry and fish curry</string>
    <string name="redrice_price">Rs120</string>
    <string name="stringhop_topic">String hoppers</string>
    <string name="stringhop_text">White string hoppers with pol sambola and dhal curry</string>
    <string name="stringhop_price">Rs110</string>
    <string name="kotthu_topic">Kotthu</string>
    <string name="kotthu_text">Plate of chicken kotthu with chicken curry</string>
    <string name="kotthu_price">Rs300</string>
    <string name="noodles_topic">Noodles</string>
    <string name="noodless_text">Fried noodles plate with one boild egg and pol sombol</string>
    <string name="noodles_price">Rs220</string>
    <string name="Topic">Grand Catering Service</string>
    <string name="et_date">Enter the Event Date</string>
    <string name="et_email">Enter the Email</string>
    <string name="confirm_btn">Confirm Oder</string>
    <string name="txtFriedRice">FriedRice</string>
    <string name="txtBiriyani">Chiken Biriyani</string>

    <string name="txtNasigorang">Nasi goreng</string>
    <string name="txtRedrice">Red rice and curry</string>
    <string name="txtStringhoppers">String Hoppers</string>
    <string name="txtKotthu">Kotthu</string>
    <string name="txtNoodles">Noodless</string>
    <string name="oder_btn">Add to Cart</string>
    <string name="clear_btn">Clear</string>
    <string name="view_btn">View Oder</string>
    <string name="Delete_btn">Delete Oder</string>
    <string name="Update_btn">Update Oder</string>
    <string name="btn_bill">Bill Amount</string>
    <string name="billLable">TotalBill Amount   </string>
    <string name="rupeeLable">Rs.</string>
    <string name="homeTopic">Grand Hotel</string>

</resources>